--- a/LWMeetConclusion.css
+++ b/LWMeetConclusion.css
@@ -447,14 +447,13 @@
   .monologue-box {
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 100%;
     height: 100%;
     gap: 5px;
-    padding: 5px;
-    margin: 50% auto;
-    overflow: hidden;
+    padding: 30px;
+    margin: 0 auto;
+    overflow: auto;
     display: none;
-    flex-direction: column;
     scroll-behavior: smooth;
   }
 
@@ -466,7 +465,7 @@
     transition: opacity 2s;
     color: white;
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
   }
 
   #repeatLoop {
@@ -477,8 +476,8 @@
     justify-content: center;
     align-items: center;
     color: white;
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
   }
 
   #repeatLoop p {
@@ -490,7 +489,7 @@
     margin-block-start: 0;
     margin-block-end: 0;
     text-align: justify;
-    font-size: 20px;
+    font-size: 15px;
   }
 
   .hidden {
